# appkit

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appkit.cmake  configure.sh
.circleci/: config.yml
cmakeModules/: appkit.cmake
include/config/: ConfigParser.h
src/: CMakeLists.txt
src/app/: AppManifest.cpp  AppManifest.h  AppSentinel.cpp  AppSentinel.h  Application.cpp  Application.h  CMakeLists.txt  Paths.cpp  UnixSignalHandler.cpp  appkit_app.po  appkit_app_ru.ts  coriolis_app.po
src/app/_includes/: Paths.h
src/app/_includes/app/: AppManifest.h  AppSentinel.h  Application.h  ReturnCode.h  UnixSignalHandler.h
src/config/: ArrayOption.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  IndexedOption.h  Option.h  PTreeRW.cpp  PTreeRW.h  PTreeUtils.cpp  PTreeUtils.h  SubtreeOption.cpp  SubtreeOption.h  ValueOption.h  appkit_config.po  coriolis_config.po
src/config/_includes/config/: ArrayOption.h  ConfigParser.h  IndexedOption.h  Option.h  PTreeRW.h  PTreeUtils.h  SubtreeOption.h  ValueOption.h
src/core/: CMakeLists.txt
src/core/_includes/boost/: SignalTracker.h  signals2.h
src/core/_includes/exception/: Config.h  DuplicateEntity.h  ErrorInfo.h  FileError.h  General.h  InvalidConfigEntry.h  InvalidPath.h  KeyInfo.h  StreamError.h
src/core/_includes/qt/: Files.h  Strings.h  TranslationInstaller.h
src/core/_includes/utils/: Macro.h
src/core/exceptions/: ErrorInfo.cpp  ErrorInfo.h  InvalidPath.h  InvalidPlugin.h
src/core/qt/: Files.cpp  Strings.cpp  Strings.h  TranslationInstaller.cpp
src/log/: CMakeLists.txt  CustomSyslogFactory.cpp  CustomSyslogFactory.h  Log.cpp  Log.h  LogParams.cpp  LogParams.h  SeverityLevel.cpp  SeverityLevel.h  TimeStampFormatterFactory.h  logger.cmake
src/log/_includes/log/: Log.h  LogParams.h  SeverityLevel.h
src/log/printers/: ContainerPrinter.h  MapPrinter.h  SetPrinter.h  VectorPrinter.h
src/plugins/: CMakeLists.txt  FactoryLoader.cpp  FactoryLoader.h  PluginException.h  PluginUtils.h  PluginWrapper.cpp  PluginWrapper.h  PluginsHolder.h  PluginsLoader.cpp  PluginsLoader.h  PluginsLoader_p.cpp  PluginsLoader_p.h  ServicePluginInterface.h  coriolis_plugins.po  coriolis_plugins_ru.ts  export.h
src/plugins/_includes/plugins/: PluginUtils.h  PluginWrapper.h  PluginsHolder.h  PluginsLoader.h  ServicePluginInterface.h
src/serialization/: CMakeLists.txt
src/serialization/_includes/serialization/: PtreeSerializer.h  Serializer.h
src/storage/: CMakeLists.txt
src/storage/_includes/storage/: CacheReader.h  CacheStorage.h  ChangesNotifier.h  FileArchive.h  Iterator.h  Mutator.h  Observer.h  ProxyStorage.h  Reader.h  Storage.h  ValueAttribute.h
src/storage/_includes/storage/mocks/: ReaderMock.h  StorageMock.h
src/translations/: CMakeLists.txt  Translations.cpp  Translations.h  translate.cmake  translate.h.in
tests/app/: AppSentinelTest.cpp  CMakeLists.txt
tests/app/aux/: CMakeLists.txt  aux.cpp  aux.h
tests/plugins/: CMakeLists.txt  DummyPluginInterface.h  PluginsLoaderTests.cpp
tests/plugins/nonservice/: NonServicePlugin.cpp  NonServicePlugin.h
tests/plugins/service/: CMakeLists.txt  ServicePlugin.cpp  ServicePlugin.h
(+33 files in other folders)
